objects/vlocity_ins__OrderAppliedPromotionItem__c.object
<CustomObject>
    <description>An Order Applied Promotion affects one or more order items. This object is the intersection between an Order Applied Promotion and an Order Item that is affected by it.</description>
    <fields>
        <fullName>vlocity_ins__AppliedAction__c</fullName>
        <label>Applied Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Apply</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaxQuantity__c</fullName>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MinQuantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderAppliedPromotionId__c</fullName>
        <label>Order Applied Promotion</label>
        <referenceTo>vlocity_ins__OrderAppliedPromotion__c</referenceTo>
        <relationshipLabel>Order Applied Promotion Affected Items</relationshipLabel>
        <relationshipName>OrderAppliedPromotionAffectedItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Applied Promotion Affected Items</relationshipLabel>
        <relationshipName>OrderAppliedPromotionAffectedItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Applied Promotion Affected Item</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Applied Promotion Affected Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>